--- a/homework-17/0-datetime/style.css
+++ b/homework-17/0-datetime/style.css
@@ -10,19 +10,21 @@ body {
 	align-items: center;
 	color: white;
 	letter-spacing: 2px;
+	background: url('./photo-1501139083538-0139583c060f.jpg');
+	background-size: 100% 100%;
 }
 .wrapper {
+	width: 500px;
+	height: 300px;
+	min-height: 150px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	background: linear-gradient(
-		to right,
-		rgb(187, 50, 107),
-		rgb(223, 146, 182) 50%
-	);
+	background: rgba(255, 255, 255, 0.178);
+	backdrop-filter: blur(2px);
+	-webkit-backdrop-filter: blur(2px);
 	padding: 1rem;
 	border-radius: 8px;
-	box-shadow: 3px 1px 3px 3px rgba(59, 59, 59, 0.432);
 	overflow: hidden;
 }
 
