--- a/homework-17/3-list/style.css
+++ b/homework-17/3-list/style.css
@@ -1,11 +1,77 @@
-.hover {
-  background-color: red;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-.done {
-  text-decoration: line-through;
+html,
+body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url('https://cdn.clipart.email/55681e19cbbdf1e807ab37c953ed322b_desk-top-view-clipart_984-533.jpeg');
+  background-size: 160% 120%;
+  background-position: -50px;
+}
+
+.l-wrapper {
+  padding: 3rem;
+  width: 450px;
+  height: 600px;
+}
+
+.c-list__container {
+  list-style: none;
+  width: 100%;
+  height: 100%;
+  transform: rotateX(35deg) skew(5deg, -6deg);
+  box-shadow: -1px 1px 10px rgb(51, 50, 50);
+  transition: box-shadow 0.4s;
+  padding: 0 1rem;
+  background-color: rgb(255, 255, 255);
+}
+.c-list__container:hover {
+  box-shadow: -12px 12px 50px rgb(3, 3, 3);
 }
 .c-list__item {
   cursor: pointer;
-  margin: 0.2rem;
+  height: 50px;
+  margin: 1rem 0;
   padding: 0.5rem;
+  line-height: 40px;
+  position: relative;
+  overflow: hidden;
+}
+.done::after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 3px;
+  background-color: black;
+  top: 55%;
+  animation: to-right 0.5s forwards;
+}
+@keyframes to-right {
+  from {
+    left: -120%;
+  }
+  to {
+    left: 0%;
+  }
+}
+
+.hover {
+  background-color: rgb(160, 155, 155);
+  font-size: 18px;
+}
+
+#toolTip {
+  width: 150px;
+  color: rgba(255, 255, 255, 0.575);
+  font-size: 50px;
+  font-weight: 900;
+  text-align: center;
 }
