--- a/homework-17/5-paragraph/style.css
+++ b/homework-17/5-paragraph/style.css
@@ -3,11 +3,22 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+.container {
+  display: flex;
+}
 .elem {
   font-size: 12px;
-  margin: 0.5rem 0;
+  margin: 0.5rem;
   padding: 0.5rem;
+  width: 200px;
 }
+
+.chosen {
+  box-shadow: 2px 2px 2px rgba(128, 128, 128, 0.521),
+    -2px -2px 2px rgba(128, 128, 128, 0.411);
+}
+
 .color__form {
   border: 1px solid;
   display: flex;
@@ -15,15 +26,18 @@
   justify-content: space-around;
   padding: 1rem;
 }
+
 .input__section {
   display: flex;
   flex-direction: column;
   margin: 5px;
 }
+
 .input__label {
   margin-bottom: 1rem;
   text-align: center;
 }
+
 input[type='text'] {
   padding: 10px;
   font-size: 1.2rem;
@@ -38,8 +52,10 @@ button[type='submit'] {
   background-color: black;
   margin: 5px;
 }
+
 input[type='text'],
 button {
+  border: 3px solid;
   border-radius: 3px;
   outline: none;
 }
