--- a/homework-18/3-books/style.css
+++ b/homework-18/3-books/style.css
@@ -59,6 +59,8 @@ table {
   color: white;
   display: grid;
   grid-template-columns: repeat(3, minmax(70px, 1fr)) 3fr;
+  position: sticky;
+  top: 42px;
 }
 
 .display__body tr {
@@ -94,11 +96,47 @@ th {
 .last span:hover {
   color: blue;
 }
-@media (max-width: 700px) {
+.result__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 200px;
+}
+.pagination {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: 20px;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  padding: 10px;
+  height: 50px;
+}
+.pagination span {
+  font-size: 20px;
+  width: 20px;
+  text-align: center;
+  cursor: pointer;
+}
+.pagination span.active {
+  background-color: white;
+  color: blue;
+}
+.pagination span:hover {
+  background-color: blue;
+  color: white;
+}
+
+@media (max-width: 800px) {
   .display__body tr {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
   }
   .last {
     grid-template-columns: 1fr;
+  }
+  .result__container {
+    margin: 0;
   }
 }
