--- a/homework-18/3-book_re/style/stylle.css
+++ b/homework-18/3-book_re/style/stylle.css
@@ -7,13 +7,14 @@
 .form__wrapper {
   height: 100vh;
   display: flex;
-  margin: 10px 10px 0;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   position: sticky;
-  top: 0px;
+  top: 0;
+  background-color: white;
 }
+
 .form__title {
   font-size: 7rem;
   font-family: 'Courier New', Courier, monospace;
@@ -53,6 +54,7 @@
   caret-color: red;
   z-index: -1;
 }
+
 #submitBtn {
   margin-left: -50px;
   height: 30px;
@@ -63,6 +65,7 @@
   outline: none;
   background-color: transparent;
 }
+
 #submitBtn svg {
   width: 14px;
 }
@@ -73,8 +76,9 @@
 }
 
 .loading {
-  height: 5px;
+  height: 2px;
 }
+
 .start-loading {
   background: linear-gradient(
     to right,
@@ -102,14 +106,39 @@
 }
 
 .pagination {
+  height: 70px;
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
+
 .pagination > * {
   cursor: pointer;
+  width: 40px;
+  text-align: center;
+}
+.pagination > *:hover {
+  background-color: #4285f4;
+  color: white;
 }
 .active {
   color: blue;
+}
+.book__container {
+  display: grid;
+  grid-template-columns: 2fr 5fr 1fr;
+}
+.book__container .book {
+  padding: 5px;
+  margin-top: 5px;
+  grid-column: 2/3;
+  display: grid;
+}
+.book div:first-child {
+  color: blue;
+}
+.book div {
+  margin: 2px 0;
 }
 
 @media (max-width: 500px) {
@@ -117,12 +146,12 @@
     font-size: 1.6rem;
   }
   #searchInput {
-    width: 200px;
+    width: 350px;
   }
 }
 @media (max-width: 900px) and (min-width: 500px) {
   .form__title {
-    font-size: 1.6rem;
+    font-size: 3rem;
   }
   #searchInput {
     width: 400px;
@@ -130,9 +159,6 @@
 }
 
 @media (min-width: 900px) {
-  .form__title {
-    font-size: 3rem;
-  }
   #searchInput {
     width: 500px;
   }
