--- a/homework-20/counter-app/src/components/Button/Button.module.css
+++ b/homework-20/counter-app/src/components/Button/Button.module.css
@@ -2,7 +2,8 @@
 	background-color: #0078d7;
 	color: white;
 	border: 1px solid #0078d7;
-	width: 60px;
+	width: 50px;
+	height: 50px;
 	margin: 10px;
 	padding: 5px 10px;
 	font-size: 20px;
